repoze.who changes
==================

1.0.4 (2008/08/22)

 - Added a key to the '[general]' config section: ``remote_user_key``.
   If you use this key in the config file, it tells who to 1)
   not perform any authentication if it exists in the environment
   during ingress and 2) to set the key in the environment for
   the downstream app to use as the REMOTE_USER variable.  The
   default is ``REMOTE_USER``.

 - Using unicode user ids in combination with the auth_tkt plugin
   would cause problems under mod_wsgi.

 - Allowed 'cookie_path' argument to InsecureCookiePlugin (and config
   constructor).  Thanks to Gustavo Narea.

1.0.3 (2008/08/16)

 - A bug in the middleware's ``authenticate`` method made it
   impossible to authenticate a user with a userid that was null
   (e.g. 0, False), which are valid identifiers.  The only invalid
   userid is now None.

 - Applied patch from Olaf Conradi which logs an error when an invalid
   filename is passed to the HTPasswdPlugin.

1.0.2 (2008/06/16)

 - Fix bug found by Chris Perkins: the auth_tkt plugin's "remember"
   method didn't handle userids which are Python "long" instances
   properly.  Symptom: TypeError: cannot concatenate 'str' and 'long'
   objects in "paste.auth.auth_tkt".

 - Added predicate-based "restriction" middleware support
   (repoze.who.restrict), allowing configuratio-driven authorization
   as a WSGI filter.  One example predicate, 'authenticated_predicate',
   is supplied, which requires that the user be authenticated either via
   'REMOTE_USER' or via 'repoze.who.identity'.  To use the filter to
   restrict access::

     [filter:authenticated_only]
     use = egg:repoze.who#authenticated

   or::

     [filter:some_predicate]
     use = egg:repoze.who#predicate
     predicate = my.module:some_predicate
     some_option = a value

1.0.1

 - Remove dependency-link to dist.repoze.org to prevent easy_install
   from inserting that path into its search paths (the dependencies